--- a/src/Web/SalesWeb/wwwroot/css/basket/basket.component.css
+++ b/src/Web/SalesWeb/wwwroot/css/basket/basket.component.css
@@ -72,15 +72,26 @@
     transition: all 0.35s;
 }
 
-    .esh-basket-checkout:hover {
-        background-color: #FFFFFF;
-        transition: all 0.35s;
-        color: #000000;
-        border: 2px solid #000000;
-    }
+.esh-basket-checkout:hover {
+    background-color: #FFFFFF;
+    transition: all 0.35s;
+    color: #000000;
+    border: 2px solid #000000;
+}
 
-@media (max-width: 576px) {
-    .esh-basket-checkout {
+.esh-basket-checkout-secondary {
+    background-color: #FFFFFF;
+    color: #000000;
+    border: 2px solid #000000;
+}
+    .esh-basket-checkout-secondary:hover {
+        background-color: #e0a240;
+        transition: all 0.35s;
+        color: #FFFFFF;
+        border: 0;
+    }
+    @media (max-width: 576px) {
+        .esh-basket-checkout {
         padding: 10px 10px;
     }
     .dama-basket-link {
