--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -59,6 +59,8 @@
                             <li><a asp-area="Grocery" asp-page="/Categories/Index">Categorias</a></li>
                             <li><a asp-area="Grocery" asp-page="/CatalogTypes/Index">Tipos de Produto</a></li>
                             <li><a asp-area="Grocery" asp-page="/Products/Index">Produtos</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a asp-area="Grocery" asp-page="/Sales/Index">Vendas</a></li>
                         </ul>
                     </li>
                 </ul>
