add to basket redirect to index (wip)

--- a/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
     </form>
     <!-- Desktop -->   
         <nav class="navbar navbar-expand-md navbar-light pt-sm-3 pb-0 px-5 mr-5 d-none d-sm-flex w-75">
-            <a asp-page="/" class="navbar-brand">
+            <a asp-page="/Index" class="navbar-brand">
                 <img src="~/images/logo-sabor.png" width="150" alt="As vendas do marcado" />
             </a>
             <ul class="navbar-nav ml-auto login-nav">
