--- a/src/Web/SalesWeb/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Web/SalesWeb/Pages/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
         <a class="nav-link esh-identity-item px-0 px-sm-3"
            asp-page="/Order/Index">
             <i class="fas fa-shopping-bag fa-lg"></i>
-            <span class="d-none d-sm-inline">Minhas Encomendas</span>
+            <span class="d-none d-sm-inline">Faturas</span>
         </a>
     </li>
     <li class="nav-item list-inline-item">
