--- a/src/Web/SalesWeb/Pages/Order/Index.cshtml
+++ b/src/Web/SalesWeb/Pages/Order/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Linq;
 @model IndexModel
 @{
-    ViewData["Title"] = "As Minhas Encomendas";
+    ViewData["Title"] = "Faturas";
 }
 
 @if (!String.IsNullOrEmpty(Model.StatusMessage))
@@ -28,35 +28,36 @@
         {
             @foreach (var item in Model.Orders)
             {
-                <article class="esh-orders-items row">
-                    <section class="esh-orders-item col-12 col-sm-2">
-                        <span class="dama-orders-title-mobile d-sm-none">Nº Encomenda: </span>
-                        @Html.DisplayFor(modelItem => item.OrderNumber)
-                    </section>
-                    <section class="esh-orders-item col-12 col-sm-4">
-                        <span class="dama-orders-title-mobile d-sm-none">Data: </span>
-                        @Html.DisplayFor(modelItem => item.OrderDate)
-                    </section>
-                    <section class="esh-orders-item col-12 col-sm-2">
-                        <span class="dama-orders-title-mobile d-sm-none">Total: </span>
-                        @Html.DisplayFor(modelItem => item.Total) €
-                    </section>
-                    <section class="esh-orders-item col-12 col-sm-2">
-                        <span class="dama-orders-title-mobile d-sm-none">Estado: </span>
-                        @Html.DisplayFor(modelItem => item.Status)
-                    </section>
-                    <section class="esh-orders-item col-12 col-sm-1">
-                        <a class="btn btn-dama-blue btn-block d-sm-none" role="button" asp-page="Detail" asp-route-orderId="@item.OrderNumber">Ver Detalhe</a>
-                        <a class="esh-orders-link-detail d-none d-sm-block" asp-page="Detail" asp-route-orderId="@item.OrderNumber">Detalhe</a>
-                    </section>
-                    <section class="esh-orders-item col-12 col-sm-1 mt-2 mb-2 mt-sm-0 mb-sm-0">
-                        @if (item.StatusType == ApplicationCore.Entities.OrderAggregate.OrderStateType.PENDING)
-                        {
-                            <a class="btn btn-primary btn-block d-sm-none btnCancel" role="button" data-order-number="@item.OrderNumber">Cancelar</a>
-                            <a class="esh-orders-link-cancel d-none d-sm-block btnCancel" href="#" role="button" data-order-number="@item.OrderNumber">Cancelar</a>
-                        }
-                    </section>
-                </article>
+        <article class="esh-orders-items row">
+            <section class="esh-orders-item col-12 col-sm-2">
+                <span class="dama-orders-title-mobile d-sm-none">Nº Encomenda (AT) </span>
+                @Html.DisplayFor(modelItem => item.OrderNumber)
+                (@Html.DisplayFor(modelItem => item.InvoiceNr))
+            </section>
+            <section class="esh-orders-item col-12 col-sm-4">
+                <span class="dama-orders-title-mobile d-sm-none">Data: </span>
+                @Html.DisplayFor(modelItem => item.OrderDate)
+            </section>
+            <section class="esh-orders-item col-12 col-sm-2">
+                <span class="dama-orders-title-mobile d-sm-none">Total: </span>
+                @Html.DisplayFor(modelItem => item.Total) €
+            </section>
+            <section class="esh-orders-item col-12 col-sm-2">
+                <span class="dama-orders-title-mobile d-sm-none">Estado: </span>
+                @Html.DisplayFor(modelItem => item.Status)
+            </section>
+            <section class="esh-orders-item col-12 col-sm-1">
+                <a class="btn btn-dama-blue btn-block d-sm-none" role="button" asp-page="Detail" asp-route-orderId="@item.OrderNumber">Ver Detalhe</a>
+                <a class="esh-orders-link-detail d-none d-sm-block" asp-page="Detail" asp-route-orderId="@item.OrderNumber">Detalhe</a>
+            </section>
+            <section class="esh-orders-item col-12 col-sm-1 mt-2 mb-2 mt-sm-0 mb-sm-0">
+                @if (item.StatusType == ApplicationCore.Entities.OrderAggregate.OrderStateType.PENDING)
+                {
+                    <a class="btn btn-primary btn-block d-sm-none btnCancel" role="button" data-order-number="@item.OrderNumber">Cancelar</a>
+                    <a class="esh-orders-link-cancel d-none d-sm-block btnCancel" href="#" role="button" data-order-number="@item.OrderNumber">Cancelar</a>
+                }
+            </section>
+        </article>
             }
         }
     </div>
