--- a/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
@@ -33,8 +33,9 @@
     <form class="form-inline py-2 search-text w-100 d-none d-sm-block" asp-page="/Search/Index" method="get">
         <input id="search" name="q" class="bg-transparent border-left-0 border-right-0 border-top-0 border-light ml-5" autocomplete="off" type="search" placeholder="Procurar" aria-label="Search">
     </form>
-    <!-- Desktop -->   
-        <nav class="navbar navbar-expand-md navbar-light pt-sm-3 pb-0 px-5 mr-5 d-none d-sm-flex w-75">
+    <!-- Desktop -->
+    <div class="container">
+        <nav class="navbar navbar-expand-md navbar-light pt-sm-3 pb-0 d-none d-sm-flex w-100">
             <a asp-page="/Index" class="navbar-brand">
                 <img src="~/images/logo-sabor.png" width="150" alt="As vendas do marcado" />
             </a>
@@ -42,6 +43,7 @@
                 @await Html.PartialAsync("_LoginPartial")
             </ul>
         </nav>
+    </div>
     <!-- Desktop -->    
      <div class="container">
         <nav class="navbar navbar-light navbar-expand-md justify-content-between pb-md-2 d-none d-sm-flex w-75"> 
