--- a/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
     <!-- Mobile -->
     <nav class="navbar navbar-light navbar-expand-md justify-content-between pb-md-2 d-flex d-sm-none">
         <a id="brand-mobile-image" asp-page="/Index" class="navbar-brand">
-            <img src="~/images/brand.png" width="50px;" alt="Dama no Jornal" />
+            <img src="~/images/logo-sabor.png" width="50px;" alt="Dama no Jornal" />
         </a>
         <ul class="list-inline ml-auto pr-1">
             @await Html.PartialAsync("_LoginPartial")
