--- a/src/Web/SalesWeb/Pages/Basket/Checkout.cshtml
+++ b/src/Web/SalesWeb/Pages/Basket/Checkout.cshtml
@@ -96,7 +96,7 @@
                             @if (!string.IsNullOrEmpty(item.CustomizeName))
                             {
                                 <br />
-                                <small id="nameInputText" class="text-muted dama-small-text">Personalização: @item.CustomizeName</small>
+                                <small id="nameInputText" class="text-muted dama-small-text">Descrição: @item.CustomizeName</small>
                             }
                             @foreach (var attr in item.Attributes)
                             {
