sage index input

--- a/src/Web/Backoffice/Pages/Sage/Index.cshtml
+++ b/src/Web/Backoffice/Pages/Sage/Index.cshtml
@@ -15,7 +15,7 @@
 <hr />
 <h4>Testes: (Usar somente para testes)</h4>
 <form method="post" >
-    Url: <input type="text" name="url" />
+    Url: <input type="text" name="url" class="form-control" />
     <input type="submit" value="Obter Dados" />
     <br /><br />
     Fatura nº: <input type="text" name="id" />
